09_arcvive/TimeSCRPATemplet/GpMessages/5897588663600
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Tuesday, May 6, 2025 6:43:49 AM</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\carucci_r\OneDrive - City of Hackensack\_Hackensack_Data_Repository\GIS_Tools\Scripts\weekly_crime_report.py", line 119
    lyr = next((l for l in visible_layers if suffix in l.name), None)
    ^
﻿IndentationError: expected an indented block after 'for' statement on line 118
</msg><msg code="0" type="0">Failed script Weekly Crime Report...</msg><msg code="-2147467259" type="100">Failed to execute (WeeklyCrimeReport).</msg><msg code="0" type="3">Failed at Tuesday, May 6, 2025 6:43:50 AM (Elapsed Time: 0.07 seconds)</msg></messages>